# trade-team10

./: .README.md.swp  .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
default/: env.list
default/src/systrade/: broker.py  engine.py  portfolio.py
default/src/systrade.egg-info/: SOURCES.txt  requires.txt
scripts/: backtest.py  backtest_compare.py  benchmark_compare.py  correlation_test.py  dashboard.py  diagnose_exits.py  fetch_history.py  sweep_leveraged.py  validate_regime.py
src/systrade/: broker.py  config.py  db.py  engine.py  feed.py  portfolio.py  trading_app.py
src/systrade.egg-info/: SOURCES.txt
src/systrade/strategies/: __init__.py  alpha_vwap.py  registry.py  scanner.py  volume_surge_breakout.py
team/1/: env.list  pyproject.toml  requirements.txt
team/1/default/: dockerfile  env.list
team/1/default/.config/logger/: config.json
team/1/default/example/: history.csv
team/1/default/src/systrade/: feed.py  trading_app.py
team/1/default/src/systrade.egg-info/: PKG-INFO
team/1/default/tests/: bars.csv  bars2.csv  test_broker.py  test_engine.py  test_portfolio.py
team/1/src/systrade/: __init__.py  broker.py  data.py  portfolio.py  position.py  strategy.py  trading_app.py
team/1/src/systrade.egg-info/: top_level.txt
team/1/tests/: test_feed.py  test_historical_feed.py  test_position.py
team/3/: trading_results.json
team/3/src/systrade/: trading_app.py
team/4/example/: buyhold.ipynb
team/4/src/systrade/: broker.py  history.py
team/6/example/: momentum.ipynb
team/6/src/systrade/: engine.py
(+1 files in other folders)
