[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "systrade"
version = "0.0.2"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2,<3",
    "pandas>=2,<3",
    "requests>=2.32.3",
    "psycopg2-binary>=2.9.9",
    "alpaca-py>=0.11.0",
    "pytz>=2024.1",
    "attrs>=23.2.0",
]

[project.optional-dependencies]
test = ["pytest~=8.4.2", "pytest-cov~=7.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
